--- a/recall/src/app/alumnidirectory/alumnidirectory.component.css
+++ b/recall/src/app/alumnidirectory/alumnidirectory.component.css
@@ -232,3 +232,9 @@ button:focus{
 .back:hover{
     cursor: pointer;
 }
+.warning{
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+    margin-top: 60px;
+}
