--- a/recall/src/app/login-alumni/login-alumni.component.css
+++ b/recall/src/app/login-alumni/login-alumni.component.css
@@ -134,7 +134,8 @@ margin-bottom: 5px;
 {
     border-radius: 5%;
     height: 200px;
-    margin-left: 19%;
+    width: 150px;
+    margin-left: 15%;
 }
 .year
 {
