--- a/recall/src/app/notificationcenter/notificationcenter.component.html
+++ b/recall/src/app/notificationcenter/notificationcenter.component.html
@@ -1,5 +1,6 @@
 <div class="main">
     <div class="top">
+        <button class="wishes back" [routerLink]="['/HomePage']">Back</button>
         <div class="bar"></div>
             <h1 class="toptext">Notifications</h1>
     </div>
