--- a/recall/src/app/eventpage/eventpage.component.html
+++ b/recall/src/app/eventpage/eventpage.component.html
@@ -39,7 +39,7 @@ As a Principal Consultant of ex cs she expressed that her company would take car
 
 About 476 III B.Tech students who attended the session were highly benefited by the session and had clearer vision of opportunities for Higher education in Germany.
         </div>
-        <button class="back" [routerLink]="['/HomePage']">Back to events</button>
+        <button class="back" [routerLink]="['/Events']">Back to events</button>
     </div>
 
    </div>
