--- a/recall/src/app/homepage/homepage.component.html
+++ b/recall/src/app/homepage/homepage.component.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 <hr>
-<div class="eventsDiv">
+<!-- <div class="eventsDiv">
   <h4 class="eventsDivhead">Upcoming Events //<span class="total">3</span></h4>
   <div class="eacheventlist" *ngFor="let event of eventsList">
     <h5 class="eventDate" style="font-size: 15px;"> Fri, Apr 17, 10:30 AM</h5>
@@ -43,7 +43,7 @@
       <h5 class="eventlocate">Dasari Auditorium,Sree Vidyanikethan</h5>
   </div>
 
-</div>
+</div> -->
 <div class="testmonialdiv">
     <h3 class="testmonialtext">Your Testmonial</h3>
     <button class="givebutton" *ngIf="!testmonialShow" (click)="writetestmonial()">Write testmonial</button>
