--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -30,7 +30,7 @@
     <p class="text-center alBranch">{{branch}}<span class="year">(2020)</span></p>
  
       
-    <img class="alImage" src={{profilepic}} alt="alumnilogo">
+    <img class="alImage" [routerLink]="['/HomePage']" src={{profilepic}} alt="alumnilogo">
     </div>
   
     </div>
