--- a/recall/src/app/alumnichapters/alumnichapters.component.css
+++ b/recall/src/app/alumnichapters/alumnichapters.component.css
@@ -34,6 +34,7 @@ margin-top: 40px;
 width: 100%;
 box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 padding: 10px;
+font-family: sans-serif;
 }
 
 .chapterimage{
@@ -69,4 +70,26 @@ padding: 10px;
 }
 button:focus{
     outline: none;
+}
+.chapterdate{
+    font-size: 17px;
+    padding: 11px;
+    padding-left: 20px;
+    font-family: sans-serif;
+}
+.users{
+   
+}
+.items{
+    display: inline-block;
+    font-size: 24px;
+    width: 50%;
+    text-align: center;
+}.number{
+    font-family: sans-serif;
+}
+.text{
+    font-family: sans-serif;
+    font-size: 17px;
+    font-weight: 200;
 }
