--- a/recall/src/app/registeralumni/registeralumni.component.html
+++ b/recall/src/app/registeralumni/registeralumni.component.html
@@ -69,17 +69,17 @@
         </div>
     </div>
 
-    <div class="styled-input">
+    <!-- <div class="styled-input">
       <div class="select">
         <select (change)="onChangeassociate($event)" formControlName="associates" name="slct" id="slct">
           <option disabled [ngValue]="null">Associate as</option>
           <option *ngFor="let associatetype of associates" [ngValue]="associatetype">{{associatetype}}</option>
         </select>
       </div>
-     </div>
+     </div> -->
 
      <!-- ----------------------------------Associate divs------------------------ -->
-     <div *ngIf="selectedassociate=='1: Employee'">
+     <!-- <div *ngIf="selectedassociate=='1: Employee'">
       <div class="styled-input">
         <input formControlName="company" type="text"/>
         <label>Company</label>
@@ -96,8 +96,8 @@
         <span></span>
       </div>
       <button type="submit" (click)="process(registerForm.value)" class="nextStepreg" [disabled]="registerForm.invalid">Register</button>
-    </div>
-    <div *ngIf="selectedassociate=='2: Alumni'">
+    </div> -->
+    <div >
 
       <div class="styled-input">
         <input formControlName="rollno" type="text" required />
@@ -132,13 +132,14 @@
        <div *ngIf="instituteselect">
         <div class="styled-input">
           <div class="select">
-            <select formControlName="branch" name="slct" id="slct">
+            <select (change)="onChangebranch($event)" formControlName="branch" name="slct" id="slct">
               <option disabled [ngValue]="null">Branch</option>
               <option *ngFor="let branch of branches" [ngValue]="branch">{{branch}}</option>
             </select>
           </div>
          </div>
        </div>
+       <div *ngIf="branchselect">
        <h3 style="padding: 30px;">Job Details</h3>
        <div class="styled-input">
         <input formControlName="company" type="text"/>
@@ -158,7 +159,8 @@
        <button type="submit" (click)="process(registerForm.value)" class="nextStepreg" [disabled]="registerForm.invalid">Register</button>
 
     </div>
-      <div *ngIf="selectedassociate=='3: Student'">
+  </div>
+      <!-- <div *ngIf="selectedassociate=='3: Student'">
            
         <div class="styled-input">
           <input formControlName="rollno" type="text" required />
@@ -202,8 +204,8 @@
          </div>
          <button type="submit" (click)="process(registerForm.value)" class="nextStepreg" [disabled]="registerForm.invalid">Register</button>
 
-    </div>
-      <div *ngIf="selectedassociate=='4: Faculty'">
+    </div> -->
+      <!-- <div *ngIf="selectedassociate=='4: Faculty'">
 
         <div class="styled-input" >
           <input formControlName="yoj" type="text" required />
@@ -235,7 +237,7 @@
            </div>
          </div>
          <button type="submit" (click)="process(registerForm.value)" class="nextStepreg" [disabled]="registerForm.invalid">Register</button>
-      </div>
+      </div> -->
     
       </form>
 </div>
